Fix imagepicker jumps on focus

--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -35,6 +35,14 @@
   align-items: center;
 }
 
+.sd-imagepicker__label {
+  position: relative;
+
+  .sd-visuallyhidden {
+    height: 100%;
+  }
+}
+
 .sd-imagepicker__image-container {
   position: relative;
 }
